// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: with URL 1`] = `
<div
  className="bordered"
>
  <AlmTab
    alm="gitlab"
    createConfiguration={[Function]}
    defaultBinding={
      Object {
        "key": "",
        "personalAccessToken": "",
        "url": "",
      }
    }
    definitionStatus={Object {}}
    definitions={
      Array [
        Object {
          "key": "foo",
          "personalAccessToken": "foobar",
          "url": "https://gitlab.com/api/v4",
        },
      ]
    }
    form={[Function]}
    loadingAlmDefinitions={false}
    loadingProjectCount={false}
    multipleAlmEnabled={true}
    onCheck={[MockFunction]}
    onDelete={[MockFunction]}
    onUpdateDefinitions={[MockFunction]}
    updateConfiguration={[Function]}
  />
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <Connect(SubCategoryDefinitionsList)
      category="almintegration"
      subCategory="gitlab"
    />
  </div>
</div>
`;

exports[`should render correctly: with branch support 1`] = `
<div
  className="bordered"
>
  <AlmTab
    alm="gitlab"
    createConfiguration={[Function]}
    defaultBinding={
      Object {
        "key": "",
        "personalAccessToken": "",
        "url": "",
      }
    }
    definitionStatus={Object {}}
    definitions={
      Array [
        Object {
          "key": "foo",
          "personalAccessToken": "foobar",
        },
      ]
    }
    form={[Function]}
    loadingAlmDefinitions={false}
    loadingProjectCount={false}
    multipleAlmEnabled={true}
    onCheck={[MockFunction]}
    onDelete={[MockFunction]}
    onUpdateDefinitions={[MockFunction]}
    updateConfiguration={[Function]}
  />
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <Connect(SubCategoryDefinitionsList)
      category="almintegration"
      subCategory="gitlab"
    />
  </div>
</div>
`;

exports[`should render correctly: with no definitions 1`] = `
<div
  className="bordered"
>
  <AlmTab
    alm="gitlab"
    createConfiguration={[Function]}
    defaultBinding={
      Object {
        "key": "",
        "personalAccessToken": "",
        "url": "",
      }
    }
    definitionStatus={Object {}}
    definitions={Array []}
    form={[Function]}
    loadingAlmDefinitions={false}
    loadingProjectCount={false}
    multipleAlmEnabled={true}
    onCheck={[MockFunction]}
    onDelete={[MockFunction]}
    onUpdateDefinitions={[MockFunction]}
    updateConfiguration={[Function]}
  />
  <div
    className="huge-spacer-top huge-spacer-bottom bordered-top"
  />
  <div
    className="big-padded"
  >
    <Connect(SubCategoryDefinitionsList)
      category="almintegration"
      subCategory="gitlab"
    />
  </div>
</div>
`;

exports[`should render correctly: without branch support 1`] = `
<div
  className="bordered"
>
  <div
    className="big-padded"
  >
    <Connect(SubCategoryDefinitionsList)
      category="almintegration"
      subCategory="gitlab"
    />
  </div>
</div>
`;
